api: server stats, container stats api completed
